src/components/footer/Footer.module.css
.footer {
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap: 2rem;
    height: 150px;
    width: 100vw;
    padding: 0.65em 0 0 0.65em;
    background-color: var(--theme-clr-4);
}

.footer__bar_link {
    height: 60%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    border: 2px dashed var(--bg-clr);
}

.footer__bar_link-item {
    width: max-content;
    font-size: 0.9rem;
    padding: 0.5em;
    border-radius: 0.5em;
    transition: 0.3s;
}

.footer__bar_link-item--developer {
    color: var(--bg-clr);
    text-decoration: none;
}

.footer__bar_link-item--developer_effect:hover {
    background-color: var(--theme-clr-1);
}

.footer__WaterMark {
    display: flex;
    justify-content: flex-end;
    align-items: flex-start;
}

.footer__WaterMark-text {
    padding: 0 1em;
    color: var(--theme-clr-4);
}

